k8s/direct-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: yuzu-web-direct
  labels:
    app: yuzu-web
spec:
  containers:
  - name: yuzu-web
    image: yuzu-web:latest
    imagePullPolicy: Never
    ports:
    - containerPort: 80
  restartPolicy: Always
