k8s/direct-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yuzu-web-service
spec:
  selector:
    app: yuzu-web
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
